# simple_trace

./: CMakeLists.txt  README.md  build.sh  simple_tcp.h  xtrace.h  xtrace_sdk.h
base/: text_map_carrier.h
client/: CMakeLists.txt
client/src/: client.cc
edge/: CMakeLists.txt
edge/src/: edge.cc
edge_old/: CMakeLists.txt
edge_old/src/: edge.cc
server/: CMakeLists.txt
server/src/: server.cc
simple_tcp/: CMakeLists.txt  simple_tcp.h
simple_tcp/src/: simple_tcp.cc
src/: client.cc  edge.cc  server.cc  simple_tcp.cc  xtrace_sdk.cc
xtrace_sdk/: CMakeLists.txt  xtrace.h  xtrace_sdk.h
xtrace_sdk/src/: xtrace_sdk.cc
